[project]
name = "pathfinder"
version = "0.1.0"
dependencies = [
    "langchain",
    "openai"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pathfinder"
version = "0.1.0"
description = ""
authors = ["Sam Hamilton <samilton@elliottmgmt.com>"]
readme = "README.md"
packages = [{include = "pathfinder"}]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^6.0.0"


[tool.poetry.dev-dependencies]
black = "^23.3"
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
mypy = "^0.971"
sphinx = "6.2.1"
myst-parser = "1.0.0"
sphinx_rtd_theme = "1.2.0"
sphinxcontrib-mermaid = "0.8.1"

[tool.black]
line.length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
